add share to fb

--- a/DecisionMaker/Doit-Info.plist
+++ b/DecisionMaker/Doit-Info.plist
@@ -32,18 +32,6 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	<key>CFBundleVersion</key>
-	<string>1.0</string>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
-	<key>UIRequiredDeviceCapabilities</key>
-	<array>
-		<string>armv7</string>
-	</array>
-	<key>FacebookAppId</key>
-	<string>752547114790229</string>
-	<key>FacebookDisplayName</key>
-	<string>Do it!</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -52,6 +40,18 @@
 				<string>fb752547114790229</string>
 			</array>
 		</dict>
+	</array>
+	<key>CFBundleVersion</key>
+	<string>1.0</string>
+	<key>FacebookAppID</key>
+	<string>752547114790229</string>
+	<key>FacebookDisplayName</key>
+	<string>Do it</string>
+	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>UIRequiredDeviceCapabilities</key>
+	<array>
+		<string>armv7</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
