--- a/DecisionMaker/Doit-Info.plist
+++ b/DecisionMaker/Doit-Info.plist
@@ -14,12 +14,14 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
-				<string>icon80</string>
-				<string>icon58</string>
-				<string>icon120</string>
+				<string>Icon-Small</string>
+				<string>Icon-Small-40</string>
+				<string>Icon-60</string>
 			</array>
 		</dict>
 	</dict>
+	<key>CFBundleIcons~ipad</key>
+	<dict/>
 	<key>CFBundleIdentifier</key>
 	<string>siyaoxie.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -38,6 +40,14 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>fb752547114790229</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>wx039962c59e8c223c</string>
 			</array>
 		</dict>
 	</array>
